--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,6 @@
+$theme-color: #a08ad2;
+
 $side-nav-background: #343746;
-$side-nav-header-background: #a08ad2;
 $side-nav-text-color: #fff;
 $side-nav-link-active-background: #211f2a;
 
