--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -79,3 +79,32 @@
   font-size: 0.75rem;
   text-transform: uppercase;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+
+  &__backdrop {
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+  }
+
+  &__body {
+    background: #fff;
+    border: 1px solid #000;
+    border-radius: 8px;
+    z-index: 1;
+    padding: 1rem;
+  }
+}
