--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,86 @@ body,
 * {
   box-sizing: border-box;
 }
+
+// basic theming
+.button {
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  padding: 0.875rem 1.5rem;
+  font-size: 1rem;
+  text-transform: uppercase;
+
+  &__icon {
+    max-height: 1.25rem;
+    margin-right: 0.5rem;
+  }
+
+  &__text {
+    font-size: 1rem;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &_default {
+    background: #343746;
+    color: #fff;
+  }
+
+  &_info {
+    background: #1976d2;
+    color: #fff;
+  }
+
+  &_success {
+    background: #388e3c;
+    color: #fff;
+  }
+
+  &_danger {
+    background: #f44336;
+    color: #fff;
+  }
+}
+
+.tag {
+  background: #e6e6e6;
+  margin: 0 1px;
+  border-radius: 100px;
+  padding: 0.2rem 0.5rem;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+
+  &__backdrop {
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+  }
+
+  &__body {
+    background: #fff;
+    border: 1px solid #000;
+    border-radius: 8px;
+    z-index: 1;
+    padding: 1rem;
+  }
+}
