--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,6 +7,14 @@
   overflow: hidden;
   height: 100%;
 
+  &__side-nav-backdrop {
+    display: none;
+  }
+
+  &__side-nav-handle {
+    display: none;
+  }
+
   &__side-nav {
     width: $side-nav-width;
     background: $side-nav-background;
@@ -27,6 +35,7 @@
     background: $app-header-background;
     display: flex;
     align-items: center;
+    padding: 0 1.5rem;
   }
 
   &__body {
@@ -35,85 +44,91 @@
   }
 }
 
-// basic theming
-.button {
-  border: 0;
-  border-radius: 3px;
-  cursor: pointer;
-  display: inline-flex;
-  align-items: center;
-  padding: 0.875rem 1.5rem;
-  font-size: 1rem;
-  text-transform: uppercase;
+@media (max-width: $screen-lg) {
+  .app {
+    position: relative;
 
-  &__icon {
-    max-height: 1.25rem;
-    margin-right: 0.5rem;
-  }
+    &__header {
+      padding: 0 1.5rem 0 4.25rem;
+    }
 
-  &__text {
-    font-size: 1rem;
-  }
+    &_nav-visible &__side-nav-backdrop {
+      display: block;
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.1);
+    }
 
-  &:focus {
-    outline: none;
-  }
+    &__side-nav-backdrop {
+      display: none;
+    }
 
-  &_default {
-    background: #343746;
-    color: #fff;
-  }
+    &_nav-visible &__side-nav-handle {
+      display: block;
+      left: $side-nav-width;
 
-  &_info {
-    background: #1976d2;
-    color: #fff;
-  }
+      .hamburger-icon {
+        .line {
+          &:nth-child(1) {
+            transform: rotate(45deg);
+            transform-origin: left;
+          }
+          &:nth-child(2) {
+            opacity: 0;
+          }
+          &:nth-child(3) {
+            transform: rotate(-45deg);
+            transform-origin: left;
+          }
+        }
+      }
+    }
 
-  &_success {
-    background: #388e3c;
-    color: #fff;
-  }
+    &__side-nav-handle {
+      left: 0.5rem;
+      top: 18px;
+      display: block;
+      position: absolute;
+      transition: all 0.5s ease-in-out;
 
-  &_danger {
-    background: #f44336;
-    color: #fff;
-  }
-}
+      .hamburger-icon {
+        background: #fff;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 1rem;
+        transition: all 0.5s ease-in-out;
+        width: 3.75rem;
+        border-top-right-radius: 0.625rem;
+        border-bottom-right-radius: 0.625rem;
 
-.tag {
-  background: #e6e6e6;
-  margin: 0 1px;
-  border-radius: 100px;
-  padding: 0.2rem 0.5rem;
-  font-size: 0.75rem;
-  text-transform: uppercase;
-}
+        .line {
+          border-radius: 0.625rem;
+          height: 6px;
+          margin: 2px 0;
+          width: 100%;
+          display: inline-block;
+          background: $side-nav-background;
+          opacity: 1;
+          transition: inherit;
+          transform: rotate(0);
+        }
+      }
+    }
 
-.modal {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-
-  &__backdrop {
-    background: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-  }
-
-  &__body {
-    background: #fff;
-    border: 1px solid #000;
-    border-radius: 8px;
-    z-index: 1;
-    padding: 1rem;
+    &_nav-visible &__side-nav {
+      left: 0;
+    }
+    
+    &__side-nav {
+      position: absolute;
+      height: 100%;
+      left: -$side-nav-width;
+      transition: all 0.5s ease-in-out;
+    }
   }
 }
