--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "styles/dimentions";
+
 body {
   margin: 0;
   padding: 0;
@@ -28,6 +30,7 @@ body,
   cursor: pointer;
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   padding: 0.875rem 1.5rem;
   font-size: 1rem;
   text-transform: uppercase;
@@ -64,10 +67,20 @@ body,
     background: #f44336;
     color: #fff;
   }
+
+  &_fab {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+    font-size: 1.75rem;
+    line-height: 1.75rem;
+  }
 }
 
 .tag {
   background: #e6e6e6;
+  display: inline-flex;
   margin: 0 1px;
   border-radius: 100px;
   padding: 0.2rem 0.5rem;
@@ -97,9 +110,18 @@ body,
 
   &__body {
     background: #fff;
-    border: 1px solid #000;
     border-radius: 8px;
     z-index: 1;
     padding: 1rem;
+    overflow: auto;
+    max-height: 100%;
+  }
+}
+
+@media (max-width: $screen-sm) {
+  .modal {
+    &__body {
+      border-radius: 0;
+    }
   }
 }
