--- a/src/styles/TaskDetails.scss
+++ b/src/styles/TaskDetails.scss
@@ -1,20 +1,43 @@
+@import "./dimentions";
+
+.title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.close {
+  font-size: 2.25rem;
+  font-weight: normal;
+  cursor: pointer;
+  padding: 0 0.5rem;
+  color: #211f2a;
+}
+
 .task-panel {
   background: #fff;
   overflow: auto;
   border-radius: 4px;
   margin-left: 1.5rem;
-  padding: 2rem;
+
+  &__metas,
+  &__actions,
+  &__details,
+  &__details-label {
+    padding: 0 2rem;
+  }
 
   &__title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     font-size: 1.5rem;
     border-bottom: 2px solid #ddd;
-    padding-bottom: 1rem;
+    padding: 0.75rem 2rem;
     margin: 0 0 2rem;
   }
 
   &__actions {
-    text-align: right;
-
     button {
       margin-right: 0.5rem;
 
@@ -36,10 +59,12 @@
   &__metas {
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
 
   &__canvas {
-    margin-right: 2rem;
+    width: 100%;
+    padding-right: 1.5rem;
   }
 
   .meta {
@@ -53,11 +78,53 @@
       font-weight: bold;
       opacity: 0.5;
       font-size: 1rem;
-      min-width: 9rem;
+      min-width: 6rem;
     }
 
     &__value {
       flex: 2;
+    }
+  }
+}
+
+@media (max-width: $screen-md) {
+  .task-panel {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: $screen-sm) {
+  .task-panel {
+    &__metas,
+    &__actions,
+    &__details,
+    &__details-label {
+      padding: 0 1.5rem;
+    }
+
+    &__title {
+      padding: 0.75rem 1.5rem;
+    }
+
+    &__section {
+      margin-bottom: 1rem;
+      width: 100%;
+    }
+
+    &__metas {
+      flex-wrap: wrap;
+    }
+
+    &__canvas {
+      padding: 0;
+    }
+
+    &__actions {
+      button {
+        margin: 0;
+        margin-bottom: 0.75rem;
+        width: 100%;
+      }
     }
   }
 }
