--- a/src/styles/TaskForm.scss
+++ b/src/styles/TaskForm.scss
@@ -1,3 +1,6 @@
+
+@import 'dimentions';
+
 .task-form {
   padding: 0 2rem;
 
@@ -15,6 +18,7 @@
 
   &__group {
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-start;
     margin-bottom: 1rem;
 
@@ -24,17 +28,28 @@
   }
 
   &__label {
-    width: 10rem;
+    width: 100%;
     text-transform: uppercase;
     font-weight: bold;
-    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 
   &__input {
     flex: 1;
+    width: 100%;
     border: 1px solid #b5b5b5;
     border-radius: 3px;
     padding: 0.75rem 1rem;
     font-size: 1rem;
+  }
+}
+
+@media (max-width: $screen-sm) {
+  .task-form {
+    &__action {
+      margin: 0;
+      margin-bottom: 0.75rem;
+      width: 100%;
+    }
   }
 }
