--- a/src/styles/Tasks.scss
+++ b/src/styles/Tasks.scss
@@ -1,3 +1,5 @@
+@import "./dimentions";
+
 .tasks {
   display: flex;
   height: 100%;
@@ -9,5 +11,17 @@
 
   &__details {
     flex: 2;
+  }
+}
+
+@media (max-width: $screen-md) {
+  .tasks {
+    &__list-visible &__details {
+      display: none;
+    }
+
+    &__details-visible &__list {
+      display: none;
+    }
   }
 }
